--- a/odoo/addons/base/views/ir_sequence_views.xml
+++ b/odoo/addons/base/views/ir_sequence_views.xml
@@ -10,7 +10,7 @@
                       <group>
                         <field name="name"/>
                         <field name="implementation"/>
-                        <field name="sequence_preview"/>
+                        <field name="sequence_preview" class="text-muted"/>
                       </group>
                       <group>
                         <field name="code"/>
